[package]
name = "tx-api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.8.1", features = ["full"] }
serde = "1.0.228"
tokio = { version = "1.50.0", features = ["full"] }
http-body-util = { version = "0.1.3", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
tokio-macros = "2.6.1"
rustls = "0.23.37"
tokio-rustls = "0.26.4"
serde_json = "1.0.149"
