[package]
name = "threatx-rust-api-client"
description = "A client library for the ThreatX API"
version = "1.0.0"
edition = "2024"
license = "MPL-2"
license-file = "LICENSE"

[dependencies]
hyper = { version = "1.8.1" }
tokio = { version = "1.50.0", features = ["full"] }
http-body-util = { version = "0.1.3" }
hyper-util = { version = "0.1.20" }
serde_json = "1.0.149"
hyper-rustls =  { version = "0.27.7", features = ["http2"] }
